[metallb] Combining l2-load-balancer and metallb modules
