# ee/se/modules/380-metallb/openapi/values.yaml
@@ -1,2 +1,110 @@
 x-extend:
   schema: config-values.yaml
+type: object
+properties:
+  internal:
+    type: object
+    default: {}
+    x-required-for-helm:
+      - l2lbservices
+    properties:
+      l2loadbalancers:
+        type: array
+        default: []
+        items:
+          type: object
+          properties:
+            name:
+              type: string
+            addressPool:
+              type: array
+              items:
+                type: string
+            interfaces:
+              type: array
+              items:
+                type: string
+            nodeSelector:
+              additionalProperties:
+                type: string
+              type: object
+            isDefault:
+              type: boolean
+      l2lbservices:
+        type: array
+        default: []
+        items:
+          type: object
+          properties:
+            name:
+              type: string
+            namespace:
+              type: string
+            serviceName:
+              type: string
+            serviceNamespace:
+              type: string
+            mlbcName:
+              type: string
+            clusterIP:
+              type: string
+            preferredNode:
+              type: string
+            selector:
+              additionalProperties:
+                type: string
+              type: object
+            externalTrafficPolicy:
+              type: string
+            internalTrafficPolicy:
+              type: string
+            publishNotReadyAddresses:
+              type: boolean
+            desiredIP:
+              type: string
+            lbAllowSharedIP:
+              type: string
+            ports:
+              items:
+                properties:
+                  appProtocol:
+                    type: string
+                  name:
+                    type: string
+                  nodePort:
+                    format: int32
+                    type: integer
+                  port:
+                    format: int32
+                    type: integer
+                  protocol:
+                    default: TCP
+                    type: string
+                  targetPort:
+                    anyOf:
+                      - type: integer
+                      - type: string
+                required:
+                  - port
+                type: object
+              type: array
+x-examples:
+  - internal:
+      l2lbservices:
+        - publishNotReadyAddresses: false
+          name: serv_config-config_mlbc-0
+          namespace: nginx
+          serviceName: serv_config
+          serviceNamespace: nginx
+          preferredNode: frontend
+          clusterIP: 2.3.4.5
+          ports:
+            - protocol: TCP
+              port: 7474
+              targetPort: 7474
+          externalTrafficPolicy: Local
+          internalTrafficPolicy: Cluster
+          selector:
+            app: nginx
+          loadBalancerName: config_mlbc
+          desiredIP: "30.30.30.30"
